# colorized-logs

./: .gitignore  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  FAQ  INSTALL  KBtin.6  KBtin_help  KBtin_help.in  KEYPAD  LICENSE  Makefile.am  Makefile.in  NEWS  OLDNEWS  README  SELECT.help  TODO  ac_ai_addrconfig.m4  ac_arg_lib.m4  ac_c_restrict.m4  ac_c_try_flag.m4  ac_create_stdint_h.m4  ac_decl_or_zero.m4  ac_easter_egg.m4  ac_func_macro.m4  ac_net.m4  ac_ptyranges.m4  ac_sco.m4  ac_sol_ip.m4  ac_ucs_size.m4  acconfig.h  acinclude.m4  aclocal.m4  action.c  alias.c  ansi2html.1  ansi2html.6  (+75 more)
.github/workflows/: build.yml  release.yml
debian/: .gitignore  changelog  control  copyright  install  lesstty  manpages  rules  watch
debian/tests/: control  testsuite
debian/upstream/: metadata
tests/: CMakeLists.txt  Makefile.am  Makefile.in  ansi2html.at  ansi2txt.at  atlocal.in  get-utf8.c  htmlpre2txt  make_tests  package.m4  pingpong  pipetty.at  run.at  runtest.sh  tests.at  tests.in  testsuite  testsuite.at  unescape  version.at
