dnl Process this file with autoconf to produce a configure script.
AC_INIT(acconfig.h)
AC_CONFIG_HEADER(config.h)

PACKAGE=KBtin
AC_SUBST(PACKAGE)
VERSION=0.2.3
AC_SUBST(VERSION)

dnl Checks for programs.
AC_LBL_C_INIT(CFLAGS, INCLUDES)
AC_LBL_DEVEL(CFLAGS)
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h strings.h sys/time.h unistd.h time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select socket)
AC_CHECK_FUNCS(getpt)
AC_LBL_LIBRARY_NET

AC_ARG_PROGRAM

AC_OUTPUT(Makefile)
